--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 venv/
-.chromadb/
+.chromadb/*
 droppedchunks/*
 txt/
 .idea/
@@ -8,3 +8,5 @@ txt/
 pdf_files/*.txt
 *.json
 check_db.py
+
+!**/.gitkeep
